study_security/study_security/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: study-security
spec:
  replicas: 3
  selector:
    matchLabels:
      app: study-security
  template:
    metadata:
      labels:
        app: study-security
    spec:
      containers:
      - name: study-security
        image: study-security:v3
        ports:
          - containerPort: 8080
