study_security/study_security/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: study-security

spec:
  type: ClusterIP
  selector:
    app: study-security 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
